# mozilla-taskgraph

./: .hatch_build.py  .pre-commit-config.yaml  .readthedocs.yml  .taskcluster.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  renovate.json  setup.py  tox.ini
.github/workflows/: pre-commit-autoupdate.yml  pre-commit.yml  pypi-publish.yml
docs/: conf.py  index.rst
docs/actions/: index.rst  release-promotion.rst
docs/transforms/: index.rst
docs/transforms/scriptworker/: index.rst  release_artifacts.rst  ship-it.rst
requirements/: base.in  base.txt  docs.in  docs.txt  test.in  test.txt
src/mozilla_taskgraph/: __init__.py  config.py  parameters.py  version.py  worker_types.py
src/mozilla_taskgraph/actions/: release_promotion.py
src/mozilla_taskgraph/transforms/: beetmover_apt.py  build_signing.py  replicate.py  update_verify.py
src/mozilla_taskgraph/transforms/scriptworker/: release_artifacts.py  signing.py
src/mozilla_taskgraph/transforms/scriptworker/shipit/: mark_as_shipped.py
src/mozilla_taskgraph/util/: attributes.py  signed_artifacts.py
taskcluster/: config.yml  requirements.txt
taskcluster/ci/: config.yml
taskcluster/ci/codecov/: kind.yml
taskcluster/ci/docker-image/: kind.yml
taskcluster/ci/fetch/: kind.yml
taskcluster/ci/hello/: kind.yml
taskcluster/ci/test/: kind.yml
taskcluster/docker/fetch/: Dockerfile
taskcluster/docker/linux/: Dockerfile
taskcluster/docker/python/: Dockerfile
taskcluster/kinds/check/: kind.yml
taskcluster/kinds/codecov/: kind.yml
taskcluster/kinds/docker-image/: kind.yml
taskcluster/kinds/fetch/: kind.yml
taskcluster/kinds/release-promotion-dummy/: kind.yml
taskcluster/kinds/test/: kind.yml
taskcluster/mt_taskgraph/: target_tasks.py
taskcluster/mt_taskgraph/transforms/: test.py
taskcluster/scripts/: codecov-upload.py  poetry-setup
taskcluster/test/params/: main-push.yml  pull-request.yml
test/: conftest.py  test_parameters.py  test_register.py  test_transforms_signing.py  test_version.py  test_worker_types.py
test/actions/: test_release_promotion.py
test/data/: testver.py
test/data/taskcluster/: config.yml
test/transforms/: test_build_signing.py  test_replicate.py  test_scriptworker_release_artifacts.py  test_scriptworker_shipit.py
test/util/: test_attributes.py  test_signed_artifacts.py
