[tool.poetry]
name = "mozilla-taskgraph"
version = "0.1.0"
description = "Mozilla-specific transforms and utilities for Taskgraph"
authors = ["Mozilla Release Engineering <release@mozilla.com>"]
license = "MPL-2.0"
readme = "README.md"
packages = [{include = "src/mozilla_taskgraph"}]

[tool.poetry.dependencies]
python = "^3.7"
taskcluster-taskgraph = "^5.4.0"

[tool.poetry.group.test.dependencies]
coverage = "^7.2.7"
pytest = "^7.3.2"
pytest-mock = "^3.11.1"
responses = "^0.23.1"
tox = "^4.6.3"

[tool.poetry.group.docs.dependencies]
sphinx = "<7"
sphinx-autobuild = "^2021.3.14"
sphinx-book-theme = "^1.0.1"


[tool.black]
line-length = 88

[tool.pytest.ini_options]
xfail_strict = true

[tool.coverage.run]
parallel = true
branch = true
source = ["src/mozilla_taskgraph/", "mozilla_taskgraph"]

[tool.ruff]
select = [
    "E", "W",       # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "PLC", "PLE",   # pylint
    "UP",           # pyupgrade
]
ignore = [
    "E402",
    "E501",  # let black handle line-length
    "E741",
]
target-version = "py37"

[tool.ruff.isort]
known-first-party = ["mozilla_taskgraph"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
