[project]
name = "mozilla-taskgraph"
description = "Mozilla specific transforms and utilities for Taskgraph"
authors = [
  { name = "Mozilla Release Engineering", email =  "release+mozilla-taskgraph@mozilla.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
requires-python = ">=3.8"
dependencies = [
  "taskcluster-taskgraph>=5.4,<10",
]
dynamic = ["version"]  # set in version.txt

[project.urls]
Repository = "https://github.com/mozilla-releng/mozilla-taskgraph"
Issues = "https://github.com/mozilla-releng/mozilla-taskgraph/issues"

[tool.uv]
dev-dependencies = [
  "coverage",
  "pytest",
  "pytest-mock",
  "responses",
  "sphinx~=5.3.0",
  "sphinx-autobuild",
  "sphinx-argparse",
  "sphinx-book-theme",
  "sphinxcontrib-mermaid",
  "taskcluster_urls",
  "tox",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]
path = ".hatch_build.py"  # handles reading version from version.txt

[tool.black]
line-length = 88

[tool.pytest.ini_options]
xfail_strict = true

[tool.commitizen]
bump_message = "chore: version bump $new_version"
changelog_incremental = true
gpg_sign = true
tag_format = "$version"
update_changelog_on_bump = true
version_provider = "pep621"

[tool.coverage.run]
parallel = true
branch = true
source = ["src/mozilla_taskgraph/", "mozilla_taskgraph"]

[tool.ruff]
select = [
    "E", "W",       # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "PLC", "PLE",   # pylint
    "UP",           # pyupgrade
]
ignore = [
    "E402",
    "E501",  # let black handle line-length
    "E741",
]
target-version = "py37"

[tool.ruff.isort]
known-first-party = ["mozilla_taskgraph"]
